change fastqc container source to biocontainers

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -164,7 +164,7 @@ process {
 //********************************** Read quality control and assesment ********************************************//
     withLabel: fastqc {
                   conda = {params.conda_fastqc ? params.conda_fastqc : "${projectDir}/envs/fastqc.yaml"}
-                  container = "staphb/fastqc:0.12.1"
+                  container = "quay.io/biocontainers/fastqc:0.12.1--hdfd78af_0"
             }
 
     withLabel: zip {
