Fixed relative paths of output directories and Nextflow-generated reports (timeline, report, trace)

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -54,13 +54,14 @@ params {
 
 
     // Directories
-    raw_reads_dir       = "../Raw_Sequence_Data/"
-    metadata_dir        = "../Metadata/"
-    genelab_dir         = "../GeneLab/"
-    fastqc_out_dir      = "../workflow_output/FastQC_Outputs/"
-    trimmed_reads_dir   = "../workflow_output/Trimmed_Sequence_Data/"
-    filtered_reads_dir  = "../workflow_output/Filtered_Sequence_Data/"
-    final_outputs_dir   = "../workflow_output/Final_Outputs/"
+    outdir              = "."
+    raw_reads_dir       = "${params.outdir}/Raw_Sequence_Data/"
+    metadata_dir        = "${params.outdir}/Metadata/"
+    genelab_dir         = "${params.outdir}/GeneLab/"
+    fastqc_out_dir      = "${params.outdir}/workflow_output/FastQC_Outputs/"
+    trimmed_reads_dir   = "${params.outdir}/workflow_output/Trimmed_Sequence_Data/"
+    filtered_reads_dir  = "${params.outdir}/workflow_output/Filtered_Sequence_Data/"
+    final_outputs_dir   = "${params.outdir}/workflow_output/Final_Outputs/"
 
     // Multiqc
     multiqc_config = "${projectDir}/config/multiqc.config"
@@ -236,15 +237,15 @@ process {
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
     enabled = true
-    file    = "../Resource_Usage/execution_timeline_${trace_timestamp}.html"
+    file    = "${params.outdir}/Resource_Usage/execution_timeline_${trace_timestamp}.html"
 }
 report {
     enabled = true
-    file    = "../Resource_Usage/execution_report_${trace_timestamp}.html"
+    file    = "${params.outdir}/Resource_Usage/execution_report_${trace_timestamp}.html"
 }
 trace {
     enabled = true
-    file    = "../Resource_Usage/execution_trace_${trace_timestamp}.txt"
+    file    = "${params.outdir}/Resource_Usage/execution_trace_${trace_timestamp}.txt"
 }
 
 
