Fixed relative paths of input/output directories for post-processing workflow

--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -2,6 +2,7 @@
 params {
 
     publishDir_mode     = "link" // "copy", "link", "symlink"
+    outdir              = "."
 
     //-------- Parameters used to generate README.txt  ------------------//
     name                = "First M. Last"  // name of analyst
@@ -14,7 +15,7 @@ params {
     processing_zip_file = "processing_info${params.assay_suffix}.zip"
     /* extra parameters and arguments to GL-gen-processed-amplicon-data-readme command
     run `bin/GL-gen-processed-amplicon-readme --help` for extra parameters that can be set
-     "--raw-reads-dir  '../Raw_Sequence_Data/' "
+     "--raw-reads-dir  '${params.outdir}/Raw_Sequence_Data/' "
      "--primers-already-trimmed" for Amplicon: if primers were trimmed prior to analysis
      */ 
     readme_extra  =  "" 
@@ -53,26 +54,26 @@ params {
      file_association_extra = ""
 
     //------------------------ files ----------------------------//
-    run_command          = "./processing_scripts/command.txt"
-    processing_commands  = "./processing_scripts/nextflow_processing_info_GLAmpliseq.txt"
-    samples              = "./unique-sample-IDs.txt"
-    runsheet             = null // e.g. "../GeneLab/GLfile.csv" or "PE_file.csv"
-    software_versions    = "../Metadata/software_versions.txt"
+    run_command          = "${params.outdir}/processing_scripts/command.txt"
+    processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info_GLAmpliseq.txt"
+    samples              = "${params.outdir}/unique-sample-IDs.txt"
+    runsheet             = null // e.g. "${params.outdir}/GeneLab/GLfile.csv" or "PE_file.csv"
+    software_versions    = "${params.outdir}/Metadata/software_versions.txt"
     // You only need to supply one of assay_table or isa_zip
     // If you supply both it will use only the assay_table
-    assay_table          = null // e.g. "../GeneLab/a_GLDS-487_amplicon-sequencing_16s_illumina-1.txt"
-    isa_zip              = null // e.g. "../GeneLab/OSD-487_metadata_GLDS-487-ISA.zip"
+    assay_table          = null // e.g. "${params.outdir}/GeneLab/a_GLDS-487_amplicon-sequencing_16s_illumina-1.txt"
+    isa_zip              = null // e.g. "${params.outdir}/GeneLab/OSD-487_metadata_GLDS-487-ISA.zip"
 
 
     //------------------------- Directories ----------------------//
     // Make sure you always end the directory names with a forward slash "/" and that if you use
     // relative paths, they are located in the run directory (./) or in its parent (../)
-    Raw_Sequence_Data       = "../Raw_Sequence_Data/"
-    FastQC_Outputs          = "../workflow_output/FastQC_Outputs/"
-    Trimmed_Sequence_Data   = "../workflow_output/Trimmed_Sequence_Data/"
-    Filtered_Sequence_Data  = "../workflow_output/Filtered_Sequence_Data/"
-    Final_Outputs           = "../workflow_output/Final_Outputs/"
-    Output_dir              = "../Post_Processing/"
+    Raw_Sequence_Data       = "${params.outdir}/Raw_Sequence_Data/"
+    FastQC_Outputs          = "${params.outdir}/workflow_output/FastQC_Outputs/"
+    Trimmed_Sequence_Data   = "${params.outdir}/workflow_output/Trimmed_Sequence_Data/"
+    Filtered_Sequence_Data  = "${params.outdir}/workflow_output/Filtered_Sequence_Data/"
+    Final_Outputs           = "${params.outdir}/workflow_output/Final_Outputs/"
+    Output_dir              = "${params.outdir}/Post_Processing/"
 
     // Specify paths to existing conda environments
     // Leave as is if you'd like to create a new conda environment
