Remove "samples" parameter ("unique-sample-IDs.txt") from post-processing workflow, and rely on already generated "GLfile.csv" instead

--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -24,7 +24,7 @@ params {
     V_V_guidelines_link = "https://genelab-tools.arc.nasa.gov/confluence/pages/viewpage.action?pageId=2428598"
 
     // A comma separated list of files to find in processing_info.zip
-    target_files             = "command.txt,nextflow_processing_info_GLAmpliseq.txt,unique-sample-IDs.txt"
+    target_files             = "command.txt,nextflow_processing_info_GLAmpliseq.txt"
 
     // Suffixes
     raw_suffix               = "_raw.fastq.gz"
@@ -56,7 +56,6 @@ params {
     //------------------------ files ----------------------------//
     run_command          = "${params.outdir}/processing_scripts/command.txt"
     processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info_GLAmpliseq.txt"
-    samples              = "${params.outdir}/unique-sample-IDs.txt"
     runsheet             = null // e.g. "${params.outdir}/GeneLab/GLfile.csv" or "PE_file.csv"
     software_versions    = "${params.outdir}/Metadata/software_versions.txt"
     // You only need to supply one of assay_table or isa_zip
