--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -21,10 +21,10 @@ params {
     readme_extra  =  "" 
 
     output_prefix = ""
-    V_V_guidelines_link = "https://genelab-tools.arc.nasa.gov/confluence/pages/viewpage.action?pageId=2428598"
+    V_V_guidelines_link = "https://github.com/nasa/GeneLab_AmpliconSeq_Workflow/blob/main/README.md" //Dummy link
 
     // A comma separated list of files to find in processing_info.zip
-    target_files             = "command.txt,nextflow_processing_info_GLAmpliseq.txt"
+    target_files             = "command.txt,nextflow_processing_info_GLAmpSeq.txt"
 
     // Suffixes
     raw_suffix               = "_raw.fastq.gz"
@@ -55,7 +55,7 @@ params {
 
     //------------------------ files ----------------------------//
     run_command          = "${params.outdir}/processing_scripts/command.txt"
-    processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info_GLAmpliseq.txt"
+    processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info_GLAmpSeq.txt"
     runsheet             = null // e.g. "${params.outdir}/GeneLab/GLfile.csv" or "PE_file.csv"
     software_versions    = "${params.outdir}/Metadata/software_versions.txt"
     // You only need to supply one of assay_table or isa_zip
