Uploaded a modified README generation script, and linked it to workflow

--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -13,10 +13,11 @@ params {
     assay_suffix        =  "_GLAmpSeq"
     readme              = "README${params.assay_suffix}.txt"
     processing_zip_file = "processing_info${params.assay_suffix}.zip"
-    /* extra parameters and arguments to GL-gen-processed-amplicon-data-readme command
-    run `bin/GL-gen-processed-amplicon-readme --help` for extra parameters that can be set
+    /* extra parameters and arguments to GL-gen-processed-data-amplicon-readme-updated.py command
+    run `bin/GL-gen-processed-data-amplicon-readme-updated.py --help` for extra parameters that can be set
      "--raw-reads-dir  '${params.outdir}/Raw_Sequence_Data/' "
      "--primers-already-trimmed" for Amplicon: if primers were trimmed prior to analysis
+     "--single-end" if dataset is single-ended
      */ 
     readme_extra  =  "" 
 
