Added rarefaction depth checks to alpha diversity and updated protocol generation
- Modified alpha diversity to generate warning/error based on rarefaction depth levels and added file output for depth values (for post-processing protocol use)
- Added ggplot2 version capture to taxonomy plot
- Uploaded an updated protocol generation script and linked it to the workflow

--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -59,6 +59,7 @@ params {
     processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info_GLAmpSeq.txt"
     runsheet             = null // e.g. "${params.outdir}/GeneLab/GLfile.csv" or "PE_file.csv"
     software_versions    = "${params.outdir}/Metadata/software_versions.txt"
+    rarefaction_depth    = "${params.outdir}/workflow_output/Final_Outputs/alpha_diversity/*rarefaction_depth.txt"
     // You only need to supply one of assay_table or isa_zip
     // If you supply both it will use only the assay_table
     assay_table          = null // e.g. "${params.outdir}/GeneLab/a_GLDS-487_amplicon-sequencing_16s_illumina-1.txt"
