--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -43,7 +43,7 @@ params {
     accession = null
 
     assay_suffix   = "_GLAmpSeq"
-    output_prefix = ""
+    output_prefix = ""  // Automatically appends '_' if not empty and does not end with '_' or '-'
     publishDir_mode = "link" // "link", "copy"
 
     // Suffixes
