--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -21,7 +21,7 @@ params {
      */ 
     readme_extra  =  "" 
 
-    output_prefix = ""
+    output_prefix = ""  // Automatically appends '_' if not empty and does not end with '_' or '-'
     V_V_guidelines_link = "https://github.com/nasa/GeneLab_AmpliconSeq_Workflow/blob/main/README.md" //Dummy link
 
     // A comma separated list of files to find in processing_info.zip
