convert cleaned param.output_prefix to closure

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -44,6 +44,11 @@ params {
 
     assay_suffix   = "_GLAmpSeq"
     output_prefix = ""  // Automatically appends '_' if not empty and does not end with '_' or '-'
+    // Computed parameter - evaluated when accessed
+    output_prefix_clean = { -> 
+        def prefix = params.output_prefix ?: ""
+        (prefix != "" && !prefix.endsWith("_") && !prefix.endsWith("-")) ? prefix + "_" : prefix 
+    }
     publishDir_mode = "link" // "link", "copy"
 
     // Suffixes
@@ -210,7 +215,7 @@ process {
           }
 
     withName: ZIP_BIOM {
-                  publishDir = [path: "${params.final_outputs_dir}${params.output_prefix}", mode: params.publishDir_mode]
+                  publishDir = [path: "${params.final_outputs_dir}", mode: params.publishDir_mode]
             }
 
 //********************************** Diversity and differential abundance testing ********************************************//
@@ -219,7 +224,7 @@ process {
                   container = "quay.io/nasa_genelab/r-diversity:1.1"
                   cpus = 5
                   memory = "10 GB"
-                  publishDir = [path: "${params.final_outputs_dir}${params.output_prefix}", mode: params.publishDir_mode]
+                  publishDir = [path: "${params.final_outputs_dir}", mode: params.publishDir_mode]
            }
 
     withName: SOFTWARE_VERSIONS {
