--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -22,6 +22,11 @@ params {
     readme_extra  =  "" 
 
     output_prefix = ""  // Automatically appends '_' if not empty and does not end with '_' or '-'
+    // Computed parameter - evaluated when accessed
+    output_prefix_clean = { -> 
+        def prefix = params.output_prefix ?: ""
+        (prefix != "" && !prefix.endsWith("_") && !prefix.endsWith("-")) ? prefix + "_" : prefix 
+    }
     V_V_guidelines_link = "https://github.com/nasa/GeneLab_AmpliconSeq_Workflow/blob/main/README.md" //Dummy link
 
     // A comma separated list of files to find in processing_info.zip
