clean up configs

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -43,8 +43,7 @@ params {
     accession = null
 
     assay_suffix   = "_GLAmpSeq"
-    output_prefix = ""  // Automatically appends '_' if not empty and does not end with '_' or '-'
-    // Computed parameter - evaluated when accessed
+    output_prefix = ""
     output_prefix_clean = { -> 
         def prefix = params.output_prefix ?: ""
         (prefix != "" && !prefix.endsWith("_") && !prefix.endsWith("-")) ? prefix + "_" : prefix 
