--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -21,8 +21,7 @@ params {
      */ 
     readme_extra  =  "" 
 
-    output_prefix = ""  // Automatically appends '_' if not empty and does not end with '_' or '-'
-    // Computed parameter - evaluated when accessed
+    output_prefix = ""
     output_prefix_clean = { -> 
         def prefix = params.output_prefix ?: ""
         (prefix != "" && !prefix.endsWith("_") && !prefix.endsWith("-")) ? prefix + "_" : prefix 
