Replace output_prefix_clean closure with params.cleaned_prefix parameter

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -44,10 +44,8 @@ params {
 
     assay_suffix   = "_GLAmpSeq"
     output_prefix = ""
-    output_prefix_clean = { -> 
-        def prefix = params.output_prefix ?: ""
-        (prefix != "" && !prefix.endsWith("_") && !prefix.endsWith("-")) ? prefix + "_" : prefix 
-    }
+    cleaned_prefix = (params.output_prefix && !params.output_prefix.endsWith("_") && !params.output_prefix.endsWith("-")) ? params.output_prefix + "_" : (params.output_prefix ?: "")
+
     publishDir_mode = "link" // "link", "copy"
 
     // Suffixes
