--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -22,10 +22,8 @@ params {
     readme_extra  =  "" 
 
     output_prefix = ""
-    output_prefix_clean = { -> 
-        def prefix = params.output_prefix ?: ""
-        (prefix != "" && !prefix.endsWith("_") && !prefix.endsWith("-")) ? prefix + "_" : prefix 
-    }
+    cleaned_prefix = (params.output_prefix && !params.output_prefix.endsWith("_") && !params.output_prefix.endsWith("-")) ? params.output_prefix + "_" : (params.output_prefix ?: "")
+
     V_V_guidelines_link = "https://github.com/nasa/GeneLab_AmpliconSeq_Workflow/blob/main/README.md" //Dummy link
 
     // A comma separated list of files to find in processing_info.zip
