--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -1,3 +1,6 @@
+plugins {
+  id 'nf-schema@2.5.1'
+}
 //***************************************** Global parameters *******************************************//
 params {
     // Mandatory parameters 
