Refactor runsheet handling for accesion-based runs - Remove file downloading subprocesses from create_runsheet.py - Stage reads in through main.nf and rename with COPY_READS to the expected format
Remove Redundant intermediate files

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -167,6 +167,11 @@ process {
                   publishDir = [path: params.genelab_dir, mode: params.publishDir_mode]
             }
 
+//********************************** Raw read staging ********************************************//
+    withName: COPY_READS {
+                  publishDir = [path: params.raw_reads_dir, mode: params.publishDir_mode]
+            }
+
 //********************************** Read quality control and assesment ********************************************//
     withLabel: fastqc {
                   conda = {params.conda_fastqc ? params.conda_fastqc : "${projectDir}/envs/fastqc.yaml"}
