Add "_GLAmpSeq" as assay suffix to file names missing it, move rarefaction_depth.txt generation after error checks

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -5,8 +5,8 @@ plugins {
 params {
     // Mandatory parameters 
     target_region = "16S" // "16S", "18S", "ITS"
-    raw_R1_suffix = "_R1_raw.fastq.gz"
-    raw_R2_suffix = "_R2_raw.fastq.gz"
+    raw_R1_suffix = "_GLAmpSeq_R1_raw.fastq.gz"
+    raw_R2_suffix = "_GLAmpSeq_R2_raw.fastq.gz"
     trim_primers  = "TRUE" // "TRUE" or "FALSE"
     
 
@@ -52,10 +52,10 @@ params {
     publishDir_mode = "link" // "link", "copy"
 
     // Suffixes
-    primer_trimmed_R1_suffix = "_R1_trimmed.fastq.gz"
-    primer_trimmed_R2_suffix = "_R2_trimmed.fastq.gz"
-    filtered_R1_suffix       = "_R1_filtered.fastq.gz"
-    filtered_R2_suffix       = "_R2_filtered.fastq.gz"
+    primer_trimmed_R1_suffix = "_GLAmpSeq_R1_trimmed.fastq.gz"
+    primer_trimmed_R2_suffix = "_GLAmpSeq_R2_trimmed.fastq.gz"
+    filtered_R1_suffix       = "_GLAmpSeq_R1_filtered.fastq.gz"
+    filtered_R2_suffix       = "_GLAmpSeq_R2_filtered.fastq.gz"
 
 
     // Directories
