Add output_prefix to fasq files, README, and processing_info.zip; use assay_suffix param instead of hardcoded value; fix README typo and pass expected output filename

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -3,10 +3,13 @@ plugins {
 }
 //***************************************** Global parameters *******************************************//
 params {
+    assay_suffix   = "_GLAmpSeq"
+    output_prefix = ""
+    
     // Mandatory parameters 
     target_region = "16S" // "16S", "18S", "ITS"
-    raw_R1_suffix = "_R1_raw.fastq.gz"
-    raw_R2_suffix = "_R2_raw.fastq.gz"
+    raw_R1_suffix = "_${params.output_prefix}${params.assay_suffix}_R1_raw.fastq.gz"
+    raw_R2_suffix = "_${params.output_prefix}${params.assay_suffix}_R2_raw.fastq.gz"
     trim_primers  = "TRUE" // "TRUE" or "FALSE"
     
 
@@ -45,21 +48,17 @@ params {
     // Mandatory parameters if using GLDS or OSD accession as input
     accession = null
 
-    assay_suffix   = "_GLAmpSeq"
-    output_prefix = ""
-
-
     publishDir_mode = "link" // "link", "copy"
 
     // Suffixes
-    primer_trimmed_R1_suffix = "_R1_trimmed.fastq.gz"
-    primer_trimmed_R2_suffix = "_R2_trimmed.fastq.gz"
-    filtered_R1_suffix       = "_R1_filtered.fastq.gz"
-    filtered_R2_suffix       = "_R2_filtered.fastq.gz"
+    primer_trimmed_R1_suffix = "_${params.output_prefix}${params.assay_suffix}_R1_trimmed.fastq.gz"
+    primer_trimmed_R2_suffix = "_${params.output_prefix}${params.assay_suffix}_R2_trimmed.fastq.gz"
+    filtered_R1_suffix       = "_${params.output_prefix}${params.assay_suffix}_R1_filtered.fastq.gz"
+    filtered_R2_suffix       = "_${params.output_prefix}${params.assay_suffix}_R2_filtered.fastq.gz"
 
 
     // Directories
-    outdir              = "."
+    outdir              = "${launchDir}"
     raw_reads_dir       = "${params.outdir}/Raw_Sequence_Data/"
     metadata_dir        = "${params.outdir}/Metadata/"
     genelab_dir         = "${params.outdir}/GeneLab/"
@@ -273,5 +272,5 @@ manifest {
     mainScript = 'main.nf'
     defaultBranch = 'main'
     nextflowVersion = '>=24.04.4'
-    version = '1.0.2'
+    version = '1.0.3'
 }
