--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -5,7 +5,7 @@ plugins {
 params {
 
     publishDir_mode     = "link" // "copy", "link", "symlink"
-    outdir              = "."
+    outdir              = "${launchDir}"
 
     //-------- Parameters used to generate README.txt  ------------------//
     name                = "First M. Last"  // name of analyst
@@ -14,8 +14,9 @@ params {
     GLDS_accession      =  null // e.g "GLDS-487"
     OSD_accession       =  null // e.g "OSD-487"
     assay_suffix        =  "_GLAmpSeq"
-    readme              = "README${params.assay_suffix}.txt"
-    processing_zip_file = "processing_info${params.assay_suffix}.zip"
+    output_prefix       = ""
+    readme              = "${params.output_prefix}_README${params.assay_suffix}.txt"
+    processing_zip_file = "${params.output_prefix}_processing_info${params.assay_suffix}.zip"
     /* extra parameters and arguments to GL-gen-processed-data-amplicon-readme-updated.py command
     run `bin/GL-gen-processed-data-amplicon-readme-updated.py --help` for extra parameters that can be set
      "--raw-reads-dir  '${params.outdir}/Raw_Sequence_Data/' "
@@ -24,24 +25,21 @@ params {
      */ 
     readme_extra  =  "" 
 
-    output_prefix = ""
-
-
     V_V_guidelines_link = "https://github.com/nasa/GeneLab_AmpliconSeq_Workflow/blob/main/README.md" //Dummy link
 
     // A comma separated list of files to find in processing_info.zip
     target_files             = "command.txt,nextflow_processing_info_GLAmpSeq.txt"
 
     // Suffixes
-    raw_suffix               = "_GLAmpSeq_raw.fastq.gz"
-    raw_R1_suffix            = "_GLAmpSeq_R1_raw.fastq.gz"
-    raw_R2_suffix            = "_GLAmpSeq_R2_raw.fastq.gz"
-    primer_trimmed_suffix    = "_GLAmpSeq_trimmed.fastq.gz"
-    primer_trimmed_R1_suffix = "_GLAmpSeq_R1_trimmed.fastq.gz"
-    primer_trimmed_R2_suffix = "_GLAmpSeq_R2_trimmed.fastq.gz"
-    filtered_suffix          = "_GLAmpSeq_filtered.fastq.gz"
-    filtered_R1_suffix       = "_GLAmpSeq_R1_filtered.fastq.gz"
-    filtered_R2_suffix       = "_GLAmpSeq_R2_filtered.fastq.gz"
+    raw_suffix               = "_${params.output_prefix}${params.assay_suffix}_raw.fastq.gz"
+    raw_R1_suffix            = "_${params.output_prefix}${params.assay_suffix}_R1_raw.fastq.gz"
+    raw_R2_suffix            = "_${params.output_prefix}${params.assay_suffix}_R2_raw.fastq.gz"
+    primer_trimmed_suffix    = "_${params.output_prefix}${params.assay_suffix}_trimmed.fastq.gz"
+    primer_trimmed_R1_suffix = "_${params.output_prefix}${params.assay_suffix}_R1_trimmed.fastq.gz"
+    primer_trimmed_R2_suffix = "_${params.output_prefix}${params.assay_suffix}_R2_trimmed.fastq.gz"
+    filtered_suffix          = "_${params.output_prefix}${params.assay_suffix}_filtered.fastq.gz"
+    filtered_R1_suffix       = "_${params.output_prefix}${params.assay_suffix}_R1_filtered.fastq.gz"
+    filtered_R2_suffix       = "_${params.output_prefix}${params.assay_suffix}_R2_filtered.fastq.gz"
 
     /* Extra parameters and arguments to validate-processed-amplicon-data command
     run `bin/GL-validate-processed-amplicon-data --help` for extra parameters that can be set
@@ -61,10 +59,10 @@ params {
 
     //------------------------ files ----------------------------//
     run_command          = "${params.outdir}/processing_scripts/command.txt"
-    processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info_GLAmpSeq.txt"
+    processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info${params.assay_suffix}.txt"
     runsheet             = null // e.g. "${params.outdir}/GeneLab/GLfile.csv" or "PE_file.csv"
     software_versions    = "${params.outdir}/Metadata/software_versions.txt"
-    rarefaction_depth    = "${params.outdir}/workflow_output/Final_Outputs/alpha_diversity/*rarefaction_depth_GLAmpSeq.txt"
+    rarefaction_depth    = "${params.outdir}/workflow_output/Final_Outputs/alpha_diversity/*rarefaction_depth${params.assay_suffix}.txt"
     // You only need to supply one of assay_table or isa_zip
     // If you supply both it will use only the assay_table
     assay_table          = null // e.g. "${params.outdir}/GeneLab/a_GLDS-487_amplicon-sequencing_16s_illumina-1.txt"
@@ -174,5 +172,5 @@ manifest {
     mainScript = 'post_processing.nf'
     defaultBranch = 'main'
     nextflowVersion = '>=24.04.4'
-    version = '1.0.2'
+    version = '1.0.3'
 }
