Reverted addition of output_prefix to fastq files (will be passed as part of assay_suffix param); some prefix/suffix fixes

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -8,8 +8,8 @@ params {
     
     // Mandatory parameters 
     target_region = "16S" // "16S", "18S", "ITS"
-    raw_R1_suffix = "_${params.output_prefix}${params.assay_suffix}_R1_raw.fastq.gz"
-    raw_R2_suffix = "_${params.output_prefix}${params.assay_suffix}_R2_raw.fastq.gz"
+    raw_R1_suffix = "${params.assay_suffix}_R1_raw.fastq.gz"
+    raw_R2_suffix = "${params.assay_suffix}_R2_raw.fastq.gz"
     trim_primers  = "TRUE" // "TRUE" or "FALSE"
     
 
@@ -51,10 +51,10 @@ params {
     publishDir_mode = "link" // "link", "copy"
 
     // Suffixes
-    primer_trimmed_R1_suffix = "_${params.output_prefix}${params.assay_suffix}_R1_trimmed.fastq.gz"
-    primer_trimmed_R2_suffix = "_${params.output_prefix}${params.assay_suffix}_R2_trimmed.fastq.gz"
-    filtered_R1_suffix       = "_${params.output_prefix}${params.assay_suffix}_R1_filtered.fastq.gz"
-    filtered_R2_suffix       = "_${params.output_prefix}${params.assay_suffix}_R2_filtered.fastq.gz"
+    primer_trimmed_R1_suffix = "${params.assay_suffix}_R1_trimmed.fastq.gz"
+    primer_trimmed_R2_suffix = "${params.assay_suffix}_R2_trimmed.fastq.gz"
+    filtered_R1_suffix       = "${params.assay_suffix}_R1_filtered.fastq.gz"
+    filtered_R2_suffix       = "${params.assay_suffix}_R2_filtered.fastq.gz"
 
 
     // Directories
