--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -15,8 +15,8 @@ params {
     OSD_accession       =  null // e.g "OSD-487"
     assay_suffix        =  "_GLAmpSeq"
     output_prefix       = ""
-    readme              = "${params.output_prefix}_README${params.assay_suffix}.txt"
-    processing_zip_file = "${params.output_prefix}_processing_info${params.assay_suffix}.zip"
+    readme              = "README${params.assay_suffix}.txt"
+    processing_zip_file = "processing_info${params.assay_suffix}.zip"
     /* extra parameters and arguments to GL-gen-processed-data-amplicon-readme-updated.py command
     run `bin/GL-gen-processed-data-amplicon-readme-updated.py --help` for extra parameters that can be set
      "--raw-reads-dir  '${params.outdir}/Raw_Sequence_Data/' "
@@ -31,15 +31,15 @@ params {
     target_files             = "command.txt,nextflow_processing_info_GLAmpSeq.txt"
 
     // Suffixes
-    raw_suffix               = "_${params.output_prefix}${params.assay_suffix}_raw.fastq.gz"
-    raw_R1_suffix            = "_${params.output_prefix}${params.assay_suffix}_R1_raw.fastq.gz"
-    raw_R2_suffix            = "_${params.output_prefix}${params.assay_suffix}_R2_raw.fastq.gz"
-    primer_trimmed_suffix    = "_${params.output_prefix}${params.assay_suffix}_trimmed.fastq.gz"
-    primer_trimmed_R1_suffix = "_${params.output_prefix}${params.assay_suffix}_R1_trimmed.fastq.gz"
-    primer_trimmed_R2_suffix = "_${params.output_prefix}${params.assay_suffix}_R2_trimmed.fastq.gz"
-    filtered_suffix          = "_${params.output_prefix}${params.assay_suffix}_filtered.fastq.gz"
-    filtered_R1_suffix       = "_${params.output_prefix}${params.assay_suffix}_R1_filtered.fastq.gz"
-    filtered_R2_suffix       = "_${params.output_prefix}${params.assay_suffix}_R2_filtered.fastq.gz"
+    raw_suffix               = "${params.assay_suffix}_raw.fastq.gz"
+    raw_R1_suffix            = "${params.assay_suffix}_R1_raw.fastq.gz"
+    raw_R2_suffix            = "${params.assay_suffix}_R2_raw.fastq.gz"
+    primer_trimmed_suffix    = "${params.assay_suffix}_trimmed.fastq.gz"
+    primer_trimmed_R1_suffix = "${params.assay_suffix}_R1_trimmed.fastq.gz"
+    primer_trimmed_R2_suffix = "${params.assay_suffix}_R2_trimmed.fastq.gz"
+    filtered_suffix          = "${params.assay_suffix}_filtered.fastq.gz"
+    filtered_R1_suffix       = "${params.assay_suffix}_R1_filtered.fastq.gz"
+    filtered_R2_suffix       = "${params.assay_suffix}_R2_filtered.fastq.gz"
 
     /* Extra parameters and arguments to validate-processed-amplicon-data command
     run `bin/GL-validate-processed-amplicon-data --help` for extra parameters that can be set
