--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -61,7 +61,7 @@ params {
     run_command          = "${params.outdir}/processing_scripts/command.txt"
     processing_commands  = "${params.outdir}/processing_scripts/nextflow_processing_info${params.assay_suffix}.txt"
     runsheet             = null // e.g. "${params.outdir}/GeneLab/GLfile.csv" or "PE_file.csv"
-    software_versions    = "${params.outdir}/Metadata/software_versions.txt"
+    software_versions    = "${params.outdir}/Metadata/software_versions${params.assay_suffix}.txt"
     rarefaction_depth    = "${params.outdir}/workflow_output/Final_Outputs/alpha_diversity/*rarefaction_depth${params.assay_suffix}.txt"
     // You only need to supply one of assay_table or isa_zip
     // If you supply both it will use only the assay_table
