Split off copying of remote input files, and encapsulated their download in a retryable process

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -172,6 +172,12 @@ process {
                   errorStrategy = 'retry'
                   publishDir = [path: params.raw_reads_dir, mode: params.publishDir_mode]
             }
+    withName: COPY_REMOTE_READS {
+                  maxRetries = 3
+                  maxForks = 5
+                  errorStrategy = 'retry'
+                  publishDir = [path: params.raw_reads_dir, mode: params.publishDir_mode]
+    }
 
 //********************************** Read quality control and assesment ********************************************//
     withLabel: fastqc {
