Add zip image / conda env, update version #, update changelog

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -43,6 +43,7 @@ params {
     conda_multiqc          = null     // /path/to/envs/multiqc
     conda_R                = null     // /path/to/envs/R
     conda_zip              = null     // /path/to/envs/zip
+    conda_wget             = null     // /path/to/envs/wget
 
 
     // Mandatory parameters if using GLDS or OSD accession as input
@@ -190,6 +191,11 @@ process {
                   container = "quay.io/nasa_genelab/zip:3.0"
            }
 
+    withName: COPY_REMOTE_READS { 
+                  conda = {params.conda_wget ? params.conda_wget : "${projectDir}/envs/wget.yaml"}
+                  container = "quay.io/nasa_genelab/wget:1.21.4"
+           }
+
     withName: RAW_FASTQC {                  
                   publishDir = [path: params.raw_reads_dir, mode: params.publishDir_mode]
             }
@@ -278,5 +284,5 @@ manifest {
     mainScript = 'main.nf'
     defaultBranch = 'main'
     nextflowVersion = '>=24.04.4'
-    version = '1.0.4'
+    version = '1.0.5'
 }
