download taxonomic ref databases with process instead of in dada r script

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -173,7 +173,7 @@ process {
                   errorStrategy = 'retry'
                   publishDir = [path: params.raw_reads_dir, mode: params.publishDir_mode]
             }
-    withName: COPY_REMOTE_READS {
+    withName: 'COPY_REMOTE_READS|DOWNLOAD_DATABASE' {
                   conda = {params.conda_wget ? params.conda_wget : "${projectDir}/envs/wget.yaml"}
                   container = "quay.io/nasa_genelab/wget:1.21.4"
                   maxRetries = 3
