- Fixed running fastqc/multiqc on filtered reads instead of trimmed reads - Added missing hexbin and vsn versions to software_versions

--- a/workflow_code/nextflow.config
+++ b/workflow_code/nextflow.config
@@ -197,12 +197,12 @@ process {
                   publishDir = [path: params.raw_reads_dir, mode: params.publishDir_mode]
             }
 
-    withName: "RAW_MULTIQC|TRIMMED_MULTIQC" {
+    withName: "RAW_MULTIQC|FILTERED_MULTIQC" {
                   conda = {params.conda_multiqc ? params.conda_multiqc : "${projectDir}/envs/multiqc.yaml"}
                   container = "quay.io/biocontainers/multiqc:1.27.1--pyhdfd78af_0"
             }
 
-    withName: "ZIP_MULTIQC_RAW|ZIP_MULTIQC_TRIMMED" {
+    withName: "ZIP_MULTIQC_RAW|ZIP_MULTIQC_FILTERED" {
                   publishDir = [path: params.fastqc_out_dir, mode: params.publishDir_mode]
             }
 
@@ -213,7 +213,7 @@ process {
                   publishDir = [path: params.trimmed_reads_dir, mode: params.publishDir_mode]
             }
            
-    withName: TRIMMED_FASTQC {
+    withName: FILTERED_FASTQC {
                   publishDir = [path: params.filtered_reads_dir, mode: params.publishDir_mode ]
             } 
 
