Revised curation table to match agreed-upon format with the curation team; updated CHAMGELOG.md

--- a/workflow_code/post_processing.config
+++ b/workflow_code/post_processing.config
@@ -55,7 +55,7 @@ params {
      "--primers-already-trimmed" for Amplicon: if primers were trimmed prior to analysis
      "--R1-used-as-single-ended-data" if processing only R1 reads as single-end
      */
-     file_association_extra = ""
+     file_association_extra = "--include-raw-multiqc-in-output" // default behavior is including raw multiqc, remove if not needed
 
     //------------------------ files ----------------------------//
     run_command          = "${params.outdir}/processing_scripts/command.txt"
