--- a/workflow_code/envs/diversity.yaml
+++ b/workflow_code/envs/diversity.yaml
@@ -19,6 +19,7 @@ dependencies:
     - r-broom=1.0.7
     - r-dendextend=1.19.0
     - r-hexbin=1.28.3
+    - r-vegan=2.6.10
     - bioconductor-phyloseq=1.50.0
     - bioconductor-mia=1.14.0
     - bioconductor-ancombc=2.8.0
